--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,8 +1,12 @@
-.App {
+.Appn {
   margin: 3em auto;
   max-width: 50em;
 }
 
-.App h1 {
+.Appm h1 {
   text-align: center;
+}
+
+div.App {
+  background-color: #f5f5f5;
 }
