--- a/src/App/App.css
+++ b/src/App/App.css
@@ -28,13 +28,37 @@ audio.FloatingPlayer-root.hidden {
 audio.FloatingPlayer-root.visible {
   width: 33vw;
   position: fixed;
-  top: 49vh;
+  bottom: 45vh;
   left: 19vw;
 }
 
 audio.FloatingPlayer-root.expanded {
   position: fixed;
-  bottom: 0vh;
-  padding-left: 1vh;
+  bottom: 1vh;
+  left: 1vw;
   width: 98vw;
+  transition: all 1s ease;
+}
+
+#updateApplication {
+  background-color: rgba(0, 0, 0, 0.7);
+  bottom: 2em;
+  box-shadow: 0px 6px 10px -5px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  color: white;
+  font-size: 0.9em;
+  right: 1em;
+  position: fixed;
+  padding: 1em;
+}
+
+#updateApplication.show {
+  display: block;
+}
+#reload {
+  margin: 0 0 0 1em;
+}
+
+#updateApplication.hide {
+  display: none;
 }
